Fix for launching on Java-17/21